--- a/report/report.tex
+++ b/report/report.tex
@@ -407,8 +407,12 @@ files / hour&554&2182&2432&9000&24000\\\hline
 \label{sec:concl}
 
 \section*{Acknowledgments}
-The authors would like to acknowledge the suggestions of many people.
-
+\noindent The authors would like to acknowledge the guidance of A. Iosup and
+D. Epema in exploring the world of Cloud Computing and offering
+the authors the chance to interact with the DAS-4 system.
+The authors would also like to acknowledge B. Ghit for his interactions
+when the authors were unable to log in to DAS-4 and also when OpenNebula
+accounts were needed.
 
 \nocite{*}
 \bibliographystyle{IEEE}
