Added setup for evaluation section

--- a/report/report.tex
+++ b/report/report.tex
@@ -402,6 +402,17 @@ files / hour&554&2182&2432&9000&24000\\\hline
 
 \section{Evaluation}
 \label{sec:eval}
+In this section the evaluation of the experimental results as given in \autoref{sec:setup} will be discussed.
+First the observed and inferred results of the two experiments we performed will be discussed.
+The second half of this section will deal with the extrapolation of these results.
+
+\subsection{Results}
+%summarize the main findings of your work and discuss the tradeoffs inherent in the design of
+%cloud-computing-based applications.Should the WantCloud CTO use IaaS-based clouds?
+
+\subsection{Extrapolation}
+%Among others, use extrapolation on the results, as reported in Section 6.b of the report, to discuss the charged time and
+%charged cost reported in section for 100,000/1,000,000/10,000,000 users and for 1 day/1 month/1 year. 
 
 \section{Conclusion}
 \label{sec:concl}
