Added mention of SplitJob in evaluation

--- a/report/report.tex
+++ b/report/report.tex
@@ -459,6 +459,10 @@ Users (Millions)&Per&Cost(EUR)\\\hline\hline
 \end{center}
 \end{table}
 
+We note that the implementation of the SplitJob would drastically change the
+outcome of these calculations. If Virtual Machines are able to balance loads and
+continuously accept activities, the throughput of the system would be much
+higher (and therefore the cost would be much lower).
 
 \section{Conclusion}
 \label{sec:concl}
