Fixed citation to E. Kohler

--- a/report/report.tex
+++ b/report/report.tex
@@ -486,7 +486,7 @@ accounts were needed.
 %
 \begin{thebibliography}{1}
 \bibitem{gifsicle}
-Eddie Kohler
+Kohler, E.
 \newblock {\em Gifsicle: Command-Line Animated GIFs},
 \newblock {\url{http://www.lcdf.org/gifsicle/}},
 \newblock {Last retrieved October 30 2013}
