--- a/report/report.tex
+++ b/report/report.tex
@@ -390,7 +390,7 @@ files / hour&554&2182&2432&9000&24000\\\hline
 
 \subsection{Experiment 2: Scaling}
 
-\begin{figure*}[b]
+\begin{figure*}[ht]
 \begin{center}
 \begin{adjustwidth}{}{}
   \resizebox{\textwidth}{!}{%
