Added time table

--- a/report/report.tex
+++ b/report/report.tex
@@ -540,7 +540,7 @@ and testing CloudSicle. It also contains times per experiment.
 \begin{tabular}{|c|c|}
 \hline
 Activity&Hours\\\hline\hline
-total-time&\\\hline
+total-time&141\\\hline
 think-time&8\\\hline
 dev-time&108\\\hline
 xp-time&7\\\hline
