Added more text to Appendix A intro

--- a/report/report.tex
+++ b/report/report.tex
@@ -532,9 +532,11 @@ accounts were needed.
 \begin{appendices}
 \section{Time Sheet}
 This section contains the times spent on various things while developing
-and testing CloudSicle. It also contains times per experiment.
+and testing CloudSicle in \autoref{tab:timetot}. It also contains times per experiment 
+(\autoref{tab:timee1} for experiment 1 and \autoref{tab:timee2} for experiment 2).
 \begin{table}[htb]
 \caption{Totaltime}
+\label{tab:timetot}
 \begin{center}
 {\tt
 \begin{tabular}{|c|c|}
@@ -553,6 +555,7 @@ wasted-time&0\\\hline
 \end{table}
 \begin{table}[htb]
 \caption{Experiment 1 Time}
+\label{tab:timee1}
 \begin{center}
 {\tt
 \begin{tabular}{|c|c|}
@@ -566,6 +569,7 @@ setup-time&4\\\hline
 \end{table}
 \begin{table}[htb]
 \caption{Experiment 2 Time}
+\label{tab:timee2}
 \begin{center}
 {\tt
 \begin{tabular}{|c|c|}
