--- a/report/report.tex
+++ b/report/report.tex
@@ -523,6 +523,15 @@ higher (and therefore the cost would be much lower).
 
 \section{Conclusion}
 \label{sec:concl}
+CloudSicle has been our attempt at creating a well scaling Cloud service.
+This report has shown the fairly robust framework of CloudSicle with support
+for advanced allocation strategies, which are currently not available for
+the project. We have shown how our simple scheme performs and how
+it is well suited for processing large datasets per client. We have also
+shown how responsive CloudSicle is to new requests and the drawback of
+resource waste that comes with it. We note how CloudSicle is a robust
+framework and that it would benefit greatly from more advanced allocation
+strategies being used for it, as the current results leave room for improvement.
 
 \section*{Acknowledgments}
 \noindent The authors would like to acknowledge the guidance of A. Iosup and
