--- a/report/report.tex
+++ b/report/report.tex
@@ -293,7 +293,8 @@ hour were used per file.
 \subsection{Experimental setup}
 Our system was deployed on the DAS-4 cluster\cite{das4}.
 For Virtual Machine monitoring we made use of the 
-Java OpenNebula Cloud API \cite{opennebulaapi}.
+Java OpenNebula Cloud API \cite{opennebulaapi}. Virtual Machines are created using the \texttt{centos-smallnet-qcow2} image available on DAS-4.
+
 To avoid having our tools interfering with the process
 we measured the makespans (in seconds), for differing
 input sizes,
@@ -302,8 +303,7 @@ for timing.
 These different input sizes consisted of instances of
 multiple of the same file being fed into the system, each exactly 54870 bytes in size. 
 Due to complications in the implemenation phase, we were
-only able to test the \emph{SingleJob} strategy: which is
-arguably the least interesting strategy we support.
+only able to test the \emph{SingleJob} strategy.
 
 \subsection{Experiment 1: Makespans}
 In the first experiment we measured the makespans of 
@@ -466,6 +466,9 @@ The second half of this section will deal with the extrapolation of these result
 \subsection{Results}
 %summarize the main findings of your work and discuss the tradeoffs inherent in the design of
 %cloud-computing-based applications.Should the WantCloud CTO use IaaS-based clouds?
+Following the results of our conducted experiments, it is interesting to discuss the implications of these results. The results of Experiment 2 show us one important trade-off in CloudSicle. While the scaling of resources works very good, it comes at the price of a high number of VMs (6 for 20 requests in total), i.e, we have to pay 10 cents for each new VM. This is primarily because of the time out we chose to kill VMs after they are done. We chose that value to be low. If the charging-scheme of the cloud provider would be to charge for \emph{actual} VM usage, this would be beneficial as we quickly remove redundant VMs. However, because Amazon charges by the hour, it would be much better to keep VMs alive for the full hour. Fortunately, this can be implemented quite easily in CloudSicle.
+
+Another observation is the fact that the actual combining of gifs using gifsicle is very fast, and does not use many CPU resources. It could be possible to easily run numerous gifsicle processes parallel on one VM. Thus the question arises if WantCloud BV even needs a cloud infrastructure. A cloud infrastructure may simply be to much overhead for such a simple light weight application.
 
 \subsection{Extrapolation}
 %Among others, use extrapolation on the results, as reported in Section 6.b of the report, to discuss the charged time and
