added future work points in conclusion

--- a/report/report.tex
+++ b/report/report.tex
@@ -536,6 +536,13 @@ resource waste that comes with it. We note how CloudSicle is a robust
 framework and that it would benefit greatly from more advanced allocation
 strategies being used for it, as the current results leave room for improvement.
 
+If WantCloud BV wants to continue with this proof of concept, we would like to improve CloudSicle in number of ways:
+\begin{itemize}
+\item Implement the SplitJob allocation policy, and evaluate its benefits compared to the default policy.
+\item Improve the performance of the downloading and uploading of files. One could for example compress the set of files the Client sends to the Slave.
+\item Creating a full API shell around gifsicle so the user can make use of all the functionality and options gifsicle offers.
+\end{itemize}
+
 \section*{Acknowledgments}
 \noindent The authors would like to acknowledge the guidance of A. Iosup and
 D. Epema in exploring the world of Cloud Computing and offering
