Shortened experiment time tables

--- a/report/report.tex
+++ b/report/report.tex
@@ -554,8 +554,8 @@ accounts were needed.
 \begin{appendices}
 \section{Time Sheet}
 This section contains the times spent on various things while developing
-and testing CloudSicle in \autoref{tab:timetot}. It also contains times per experiment 
-(\autoref{tab:timee1} for experiment 1 and \autoref{tab:timee2} for experiment 2).
+and testing CloudSicle in \autoref{tab:timetot}. It also contains times for both experiments in 
+\autoref{tab:timee1}.
 \begin{table}[htb]
 \caption{Totaltime}
 \label{tab:timetot}
@@ -576,29 +576,16 @@ wasted-time&0\\\hline
 \end{center}
 \end{table}
 \begin{table}[htb]
-\caption{Experiment 1 Time}
+\caption{Experiment Time}
 \label{tab:timee1}
 \begin{center}
 {\tt
-\begin{tabular}{|c|c|}
+\begin{tabular}{|c|c|c|}
 \hline
-total-time&4.5\\\hline
-dev-time&0.5\\\hline
-setup-time&4\\\hline
-\end{tabular}
-} 
-\end{center}
-\end{table}
-\begin{table}[htb]
-\caption{Experiment 2 Time}
-\label{tab:timee2}
-\begin{center}
-{\tt
-\begin{tabular}{|c|c|}
-\hline
-total-time&2.5\\\hline
-dev-time&0.5\\\hline
-setup-time&2\\\hline
+Experiment&1&2\\\hline\hline
+total-time&4.5&2.5\\\hline
+dev-time&0.5&0.5\\\hline
+setup-time&4&2\\\hline
 \end{tabular}
 } 
 \end{center}
