--- a/report/report.tex
+++ b/report/report.tex
@@ -39,9 +39,15 @@ University of Technology (TUDelft)}}
 %\thispagestyle{plain}\pagestyle{plain}
 
 \begin{abstract}
-This article explains how to use a \LaTeX\ class that produces a good
-approximation to the style used in the IEEE Transactions.  The article
-is itself an example of the IEEEtran.cls class in action.
+This report shows CloudSicle an IaaS-based implementation of Gifsicle,
+for the creation of animated \emph{.gif} images. The report shows
+the modular framework that makes up CloudSicle and some possible
+strategies that could be made for it. The results of
+two types of experiments are evaluated and it is found that the
+current proof of concept for CloudSicle is lacking a good allocation
+strategy. For the current strengths of CloudSicle it is also recommended
+WantCloud BV reconsiders its use of Cloud-based processing for
+generating \emph{.gif} images.
 \end{abstract}
 
 \section{Introduction}
