--- a/report/report.tex
+++ b/report/report.tex
@@ -39,8 +39,8 @@ University of Technology (TUDelft)}}
 %\thispagestyle{plain}\pagestyle{plain}
 
 \begin{abstract}
-This report shows CloudSicle an IaaS-based implementation of Gifsicle,
-for the creation of animated \emph{.gif} images. The report shows
+This report shows CloudSicle.An IaaS-based implementation of Gifsicle,
+for the creation of animated \emph{.gif} images. We show
 the modular framework that makes up CloudSicle and some possible
 strategies that could be made for it. The results of
 two types of experiments are evaluated and it is found that the
@@ -66,7 +66,7 @@ textual content on a large scale and delivering images on a large scale.
 Following the history of the internet, the obvious next step would then be
 delivering \textit{.gif}s on a large scale. This is where CloudSicle comes into play.
 
-CloudSicle is an application we developed as a proof of concept to 
+CloudSicle is an application we developed as a proof of concept for \textbf{WantCloud BV}, to 
 check the feasibility of Cloud Computing to deliver a rich internet experience.
 The goal of the application is to process multiple images into one (animated) image in a large scale context. For the sake of implementation
 we have focused ourselves on the communication between a client,
@@ -85,7 +85,7 @@ The structure of this report will be as follows:
 \begin{itemize}
 \item In \autoref{sec:require} we will lay out our requirements.
 \item \autoref{sec:design} will explain the design of CloudSicle as well as some implementation details.
-\item We evaluate CloudSicle with a number of experiments shown in \autoref{sec:eval}
+\item We evaluate CloudSicle with a number of experiments shown in \autoref{sec:setup}
 \item In \autoref{sec:eval} we will discuss the main findings of our work as well as the trade-offs of using CloudSicle.
 \end{itemize}
 
