--- a/report/report.tex
+++ b/report/report.tex
@@ -545,7 +545,7 @@ If WantCloud BV wants to continue with this proof of concept, we would like to i
 \begin{itemize}
 \item Implement the SplitJob allocation policy, and evaluate its benefits compared to the default policy.
 \item Improve the performance of the downloading and uploading of files. One could for example compress the set of files the Client sends to the Slave.
-\item Creating a full API shell around gifsicle so the user can make use of all the functionality and options gifsicle offers.
+\item Creating a full API shell around Gifsicle so the user can make use of all the functionality and options gifsicle offers.
 \end{itemize}
 
 \section*{Acknowledgments}
